# hm-ai-fuzz

./: .gitignore  README.md  pyproject.toml
core/: __init__.py  pipeline.py  protocols.py  schema_adapter_v2.py  schemas.py
extractors/proc/: __init__.py  extractor.py  locator.py  models.py  ops.py  proc_paths.py  source_index.py  text_utils.py
generators/syzkaller/: __init__.py  minimal.py
llm/: __init__.py  client.py  config.py  schemas.py
llm/agents/: __init__.py  discover_agent.py  fix_agent.py  model_agent.py
llm/prompts/: discover_system.txt  fix_system.txt  model_system.txt
modelers/: __init__.py  simple_diff.py
schema/: README.md  common.schema.json  diff.schema.json  discover.schema.json  generate.schema.json  pipeline.schema.json  validate.schema.json
scripts/: publish_proc_to_syzkaller.sh  run_fix_agent_failure_demo.sh  run_fix_agent_real_parse_failure_demo.sh  run_proc_diff_demo.sh  run_proc_generate_demo.sh  run_proc_test_suite.sh  run_proc_validate_demo.sh  validate_proc_diff_with_sampled_base.sh  validate_proc_discover.sh  validate_proc_generate.sh  validate_proc_workflow.sh
tests/: test_proc_workflow.py
validators/: noop.py  syzkaller_build.py
workflow/: README.md  think.md
workflows/: proc_workflow.py
