[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hm-ai-fuzz"
version = "0.1.0"
description = "Plugin-based syscall fuzz workflow framework"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hm-ai-fuzz = "workflows.proc_workflow:main"

[tool.setuptools.packages.find]
include = ["core*", "extractors*", "modelers*", "generators*", "validators*", "workflows*", "llm*"]
